Added validation code to the merge tasks to verify that input data is sorted.
Enhanced serialisation code to eliminate class identification information in the stream where single data types are being stored.
Fixed a bug in the ListIdTracker class where unsorted ids were not being sorted correctly.
Added new dataset task --dataset-write-read for creating temporary datasets.
Added new dataset task --dataset-bounding-box for extracting bounding boxes from datasets.
Added new dataset task --dataset-dump for reading the entire contents of a dataset.
Command line applications now returns status codes, 0 for success, non-zero for failure.

0.24
Fixed a bug in the XML node writing code where it would write a ',' character instead of '.' as the decimal separator in some locales.

0.23
Added support for a custom decoder when writing xml files to workaround the current production utf8 double encoding issue.
Added short task names to shorten command line (eg. --write-xml becomes --wx).
Fixed a node changeset bug where nodes created at the end of the interval were being excluded from the query.
Added support for default task arguments requiring no name and added them for commonly used tasks requiring a single argument.

0.22
Updated mysql writing tasks to check if a timestamp is set and raise a meaningful error indicating where the error occurred.
Modified mysql tasks to use the default character encoding for database connections to avoid suspected double encoding with the production database.
Fixed the Entity serialisation to cater for null user ids and timestamps.
Removed all 0.4 tasks.
Added a new IdList id tracker implementation to be used internally by area filtering tasks to reduce memory usage on small'ish areas.  Old BitSet implementation is still selectable if large bounding boxes are required.
Added automatic compression method detection for all xml file tasks to avoid need to use compressionMethod argument.

0.21